style.css
@import url(https://fonts.googleapis.com/css?family=Raleway);
@import url(https://fonts.googleapis.com/css?family=Oxygen);
body {
    margin: 0%;    
    background-color: rgb(10, 10, 10);
    font-size: 0.9em;
}

/* Bio */
.bio {
    width: 100%;
    font-family: 'Oxygen';
    color: #222;
    text-align: center;
}
.bio div {
    text-align: left;
    display: inline-block;
    margin: 2%;
    margin-left: 4%;
    margin-right: 4%;
}
.bio h2 {
    margin-top: 0;
    margin-bottom: 0;
}
.bio p {
    display: inline-block;
    margin: 0;
    color: rgb(20, 20, 90);
}
.bio img.dp {
    max-width: 20vw;
    display: inline-block;
    border-radius: 50%;
    margin: 4%;
    box-shadow: 0 0 30px #fff;
}
.bio a {
    color: #333;
}
.bio a:hover {
    text-decoration: none;
}

/* Top bar */
.navbar {
    width: 100%;
    position: fixed;
    top: 0px;
    z-index: 2;
    /* backdrop-filter declaration is considered experimental as Mozilla Developer Network (MDN) */
    -webkit-backdrop-filter: saturate(180%) blur(10px);
    backdrop-filter: saturate(110%) blur(5px);
}
ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: rgba(10, 10, 10, 0.9);
    font-family: 'Oxygen';
    box-shadow: 0 0 20px rgba(50, 50, 100, 0.8);
}
li {
    float: left;
    font-size: 2.6vh;
    color: #fff;
}
li > a {
    display: block;
    color: #eee;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 120%;
}
.flogolink {
    display: block;
    color: #fff;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    text-transform: lowercase;
}
#proj {
    float: right;
    text-transform: capitalize;
    color: #eee;
}
#slash2 {
    font-size: 60%;
}

/* Content */
.content1 {
    overflow-x: auto;
    min-width: 100%;
    background-color: #fff;
    color: #fff;
    background-attachment: fixed;
    min-height: 100vh;
    height: 120%;
    text-align: center;
}
.content1 h1 {
    font-family: 'Oxygen';
    color: #135;
}
.content1 table {
    display: inline-table;
    margin-top: 2%;
    margin-bottom: 2%;
    margin-left: 0;
    margin-right: 0;
    font-size: 130%;
    font-family: 'Oxygen';
	box-shadow: 0px 0px 30px #00f;
}
.content1 tr:nth-child(even) {
    background-color: rgb(10, 10, 10);
}
.content1 tr:nth-child(odd) {
    background-color: #333;
    color: #fff;
}
.content1 th {
    padding-top: 2vh;
    padding-bottom: 2vh;
    padding-left: 2vw;
    padding-right: 2vw;
}
.content1 td {
    padding-top: 1vh;
    padding-bottom: 1vh;
    padding-left: 1vw;
    padding-right: 1vw;
}
.content1 td a {
    color: inherit;
}
.content1 td a:hover {
    text-decoration: none;
}
table#news {
    box-shadow: none;
    max-width: 600px;
}
table#news th {
	display: none;
}
table#news tr {
	display: block;
	padding: 0%;
	margin-left: 0%;
	margin-right: 0%;
	box-shadow: 0px 0px 5px #347;
    margin-bottom: 25%;
}
table#news td:nth-child(odd) {
	display: block;
	text-align: left;
	font-size: 70%;
    padding: 4%;
}
table#news td:nth-child(even) {
	text-align: left;
	display: block;
	font-size: 100%;
	padding: 0%;
}
table#news tr td img {
    height: auto;
    width: 97%;
    padding: 0%;
   	margin-left: 0%;
   	margin-right: 0%;
   	margin-top: 1%;
   	margin-bottom: 1%;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.9);
}
table#news tr td img.pp {
    height: inherit;
    width: inherit;
    border-radius: 50%;
    margin-right: 0.5%;
    margin-left: inherit;
    box-shadow: none;
}
span.dp {
    display: inline-flex;
    margin-bottom: 0.6%;
}
span.dplink {
    line-height: 0.7rem;
    margin-left: 1%;
    display: inline-flex;
    margin-bottom: 0.6%;
}
a.cardlink {
    font-size: 1.2em;
}
.foot {
    width: 100%;
    background-color: rgb(10, 10, 10);
    color: #fff;
    text-align: center;
    font-family: 'Oxygen';
    height: 100%;
    font-size: 85%;
    margin-top: 2%;
    margin-bottom: 3%;
}
.foot > a {
    color: #fff;
}
.foot > a:hover {
    color: #eee;
    text-decoration: none;
}
.foot > h1 {
    margin-left: 5%;
    margin-right: 5%;
    text-align: left;
}
.foot > p {
    text-align: left;
    margin-right: 5%;
    margin-left: 5%;
    margin-bottom: 5%;
}
.heart {
    color: #f30;
    font-family: serif;
    font-size: 120%;
}
* {
    transition: all 0.8s ease-in-out;
    -webkit-transition: all 0.8s ease-in-out;
}

